--- a/fri/src/main/resources/application-op.yml
+++ b/fri/src/main/resources/application-op.yml
@@ -54,6 +54,12 @@ spring:
 #        # 콘솔에 뜨는 sql 보기 좋게 만들어준다.
 #        format_sql: true
 
+  # springboot 파일 기본 용량제한 1MB -> 3MB
+  servlet:
+    multipart:
+      max-file-size: 3MB
+      max-request-size: 3MB
+
 mail:
   smtp:
     auth: true
